Fixed visible tooltip on hover #42

--- a/src/main/webapp/app/features/space/component/product-coordinate-tooltip/product-coordinate-tooltip.component.scss
+++ b/src/main/webapp/app/features/space/component/product-coordinate-tooltip/product-coordinate-tooltip.component.scss
@@ -11,7 +11,7 @@
 }
 
 .tooltip__content--invisible {
-  visibility: hidden;
+  display: none;
 }
 
 .tooltip__content--wrapper {
